# cache-proxy

./: CMakeLists.txt
include/: cache.h  const.h  logger.h  proxy.h  server.h  utils.h
src/: main.c
src/cache/: cache.c
src/net/: proxy.c  server.c
src/utils/: logger.c  utils.c
test/: downloading-test.sh  parallel-test.sh
